--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "format:fix": "pretty-quick --staged",
-    "precommit": "run-s format:fix lint"
+    "precommit": "run-s format:fix"
   },
   "husky": {
     "hooks": {
@@ -18,16 +18,27 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^5.1.0",
     "@angular/animations": "~11.2.3",
+    "@angular/cdk": "^11.2.2",
     "@angular/common": "~11.2.3",
     "@angular/compiler": "~11.2.3",
     "@angular/core": "~11.2.3",
     "@angular/forms": "~11.2.3",
+    "@angular/material": "^11.2.2",
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "class-validator": "^0.13.1",
+    "date-fns": "^2.17.0",
+    "dexie": "^3.0.3",
+    "lodash": "^4.17.21",
+    "ngx-mask": "^11.1.4",
     "rxjs": "~6.6.0",
+    "ss-search": "^1.5.21",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
